# Our-SROA-MergeFunc-Passes

./: .gitignore  README.md
llvm-pass/: CMakeLists.txt  MergeFuncPass.cpp  MySROA.cpp
test/: example1.c  example2.c  example3.c  example4.c  test.sh
test/combined/: example1.c  example2.c
test/merge/: example1.c  example2.c
test/sroa/: example1.c  example2.c
